<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/contacts"
            android:title="@string/nav_contacts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_live_help_black"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black"
            android:title="@string/nav_logout" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_contactus"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/nav_contactus"/>
        </menu>
    </item>

</menu>
