<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_contact_name"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contact_number"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="normal" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivCall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/call"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:layout_gravity="center_horizontal|center_vertical"
            app:srcCompat="@drawable/call" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:tint="@color/red"
            android:contentDescription="@string/delete"
            android:scaleX="1.1"
            android:scaleY="1.1"
            app:srcCompat="@drawable/delete" />

    </LinearLayout>

</LinearLayout>